tests/cases/errors/fwrite_unsupported/main.sv
module Top;
  initial begin
    $fwrite(1, "x");
  end
endmodule
